--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="table__section">
             <table class="orders__table">
               <thead>
-                <tr>
+                <tr class="orders__table__head">
                   <th class="orders__table__title">Order Number</th>
                   <th class="orders__table__title">Creation Date</th>
                   <th class="orders__table__title">Total Quantity</th>
