--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                   type="text"
                   name="search"
                   placeholder="Search"
+                  id="searchInput"
                 />
               </div>
             </div>
@@ -100,7 +101,7 @@
           <!--Orders Table-->
 
           <div class="table__section">
-            <table class="orders__table">
+            <table class="orders__table" id="dataTable">
               <thead>
                 <tr class="orders__table__head">
                   <th class="orders__table__title">Order Number</th>
@@ -496,5 +497,6 @@
     </main>
     <script src="./select.js"></script>
     <script src="./filter.js"></script>
+    <script src="./search.js"></script>
   </body>
 </html>
