changes in filter

--- a/index.html
+++ b/index.html
@@ -202,7 +202,25 @@
                         </label>
                       </form>
                     </div>
-                    <div class="filter__list__point">Quantity</div>
+                    <div class="filter__list__point">
+                      Quantity
+                      <svg class="icon__info" width="20" height="20">
+                        <use href="./images/icons.svg#icon-info"></use>
+                      </svg>
+                      <div class="quantity__input__thumb">
+                        <input
+                          class="quantity__input"
+                          type="text"
+                          placeholder="From"
+                        />
+                        <div class="line"></div>
+                        <input
+                          class="quantity__input"
+                          type="text"
+                          placeholder="till"
+                        />
+                      </div>
+                    </div>
                     <div>
                       <button class="aply__button" type="button">Apply</button>
                       <button class="clear__button" type="reset">Clear</button>
