checkbox is done

--- a/index.html
+++ b/index.html
@@ -115,58 +115,82 @@
                   <div class="filter__list__point">
                     Status
                     <form class="fiter__form">
-                      <label for="option1">
+                      <label for="option1" class="checkbox__field">
                         <input
                           type="checkbox"
                           id="option1"
                           name="options"
                           value="option1"
+                          class="visuallyhidden"
                         />
+                        <svg class="checkbox" width="18" height="18">
+                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        </svg>
                         Processing
                       </label>
-                      <label for="option2">
+                      <label for="option2" class="checkbox__field">
                         <input
                           type="checkbox"
                           id="option2"
                           name="options"
                           value="option2"
+                          class="visuallyhidden"
                         />
+                        <svg class="checkbox" width="18" height="18">
+                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        </svg>
                         Ready for Shipment
                       </label>
-                      <label for="option3">
+                      <label for="option3" class="checkbox__field">
                         <input
                           type="checkbox"
                           id="option3"
                           name="options"
                           value="option3"
+                          class="visuallyhidden"
                         />
+                        <svg class="checkbox" width="18" height="18">
+                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        </svg>
                         In Transit
                       </label>
-                      <label for="option4">
+                      <label for="option4" class="checkbox__field">
                         <input
                           type="checkbox"
                           id="option4"
                           name="options"
                           value="option4"
+                          class="visuallyhidden"
                         />
+                        <svg class="checkbox" width="18" height="18">
+                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        </svg>
                         Delivered
                       </label>
-                      <label for="option5">
+                      <label for="option5" class="checkbox__field">
                         <input
                           type="checkbox"
                           id="option5"
                           name="options"
                           value="option5"
+                          class="visuallyhidden"
                         />
+                        <svg class="checkbox" width="18" height="18">
+                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        </svg>
                         Cancelled
                       </label>
-                      <label for="option6">
+                      <label for="option6" class="checkbox__field">
                         <input
                           type="checkbox"
                           id="option6"
                           name="options"
                           value="option6"
+                          class="visuallyhidden"
                         />
+                        <svg class="checkbox" width="18" height="18">
+                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        </svg>
                         Returned
                       </label>
                     </form>
@@ -174,31 +198,43 @@
                   <div class="filter__list__point">
                     Shipping Type
                     <form class="fiter__form">
-                      <label for="option7">
+                      <label for="option7" class="checkbox__field">
                         <input
                           type="checkbox"
                           id="option7"
                           name="options"
                           value="option7"
+                          class="visuallyhidden"
                         />
+                        <svg class="checkbox" width="18" height="18">
+                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        </svg>
                         Free Shipping
                       </label>
-                      <label for="option8">
+                      <label for="option8" class="checkbox__field">
                         <input
                           type="checkbox"
                           id="option8"
                           name="options"
                           value="option8"
+                          class="visuallyhidden"
                         />
+                        <svg class="checkbox" width="18" height="18">
+                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        </svg>
                         Priority Mail
                       </label>
-                      <label for="option9">
+                      <label for="option9" class="checkbox__field">
                         <input
                           type="checkbox"
                           id="option9"
                           name="options"
                           value="option9"
+                          class="visuallyhidden"
                         />
+                        <svg class="checkbox" width="18" height="18">
+                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        </svg>
                         Priority Mail Express
                       </label>
                     </form>
