--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
               <img src="./images/user.jpg" alt="user photo" />
             </div>
             <p class="menu__user__name">MAX SMITH</p>
-            <svg class="menu__user__icon" width="32" height="32">
-              <use href="./images/icons.svg#icon-chevron-down"></use>
+            <svg class="menu__user__icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-more_vert"></use>
             </svg>
           </div>
         </section>
@@ -71,7 +71,7 @@
                   </svg>
                   <p class="orders__filter__option">Filter</p>
                 </div>
-                <svg class="icon" width="24" height="24" id="iconFilter">
+                <svg class="details-icon" id="iconFilter">
                   <use href="./images/icons.svg#icon-chevron-down"></use>
                 </svg>
               </div>
@@ -123,8 +123,8 @@
                           value="option1"
                           class="visuallyhidden"
                         />
-                        <svg class="checkbox" width="18" height="18">
-                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        <svg class="checkbox">
+                          <use href="./images/icons.svg#icon-checkbox"></use>
                         </svg>
                         Processing
                       </label>
@@ -136,8 +136,8 @@
                           value="option2"
                           class="visuallyhidden"
                         />
-                        <svg class="checkbox" width="18" height="18">
-                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        <svg class="checkbox">
+                          <use href="./images/icons.svg#icon-checkbox"></use>
                         </svg>
                         Ready for Shipment
                       </label>
@@ -149,8 +149,8 @@
                           value="option3"
                           class="visuallyhidden"
                         />
-                        <svg class="checkbox" width="18" height="18">
-                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        <svg class="checkbox">
+                          <use href="./images/icons.svg#icon-checkbox"></use>
                         </svg>
                         In Transit
                       </label>
@@ -162,8 +162,8 @@
                           value="option4"
                           class="visuallyhidden"
                         />
-                        <svg class="checkbox" width="18" height="18">
-                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        <svg class="checkbox">
+                          <use href="./images/icons.svg#icon-checkbox"></use>
                         </svg>
                         Delivered
                       </label>
@@ -175,8 +175,8 @@
                           value="option5"
                           class="visuallyhidden"
                         />
-                        <svg class="checkbox" width="18" height="18">
-                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        <svg class="checkbox">
+                          <use href="./images/icons.svg#icon-checkbox"></use>
                         </svg>
                         Cancelled
                       </label>
@@ -188,8 +188,8 @@
                           value="option6"
                           class="visuallyhidden"
                         />
-                        <svg class="checkbox" width="18" height="18">
-                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        <svg class="checkbox">
+                          <use href="./images/icons.svg#icon-checkbox"></use>
                         </svg>
                         Returned
                       </label>
@@ -206,8 +206,8 @@
                           value="option7"
                           class="visuallyhidden"
                         />
-                        <svg class="checkbox" width="18" height="18">
-                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        <svg class="checkbox">
+                          <use href="./images/icons.svg#icon-checkbox"></use>
                         </svg>
                         Free Shipping
                       </label>
@@ -219,8 +219,8 @@
                           value="option8"
                           class="visuallyhidden"
                         />
-                        <svg class="checkbox" width="18" height="18">
-                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        <svg class="checkbox">
+                          <use href="./images/icons.svg#icon-checkbox"></use>
                         </svg>
                         Priority Mail
                       </label>
@@ -232,8 +232,8 @@
                           value="option9"
                           class="visuallyhidden"
                         />
-                        <svg class="checkbox" width="18" height="18">
-                          <use href="./images/icons.svg#icon-checkboks"></use>
+                        <svg class="checkbox">
+                          <use href="./images/icons.svg#icon-checkbox"></use>
                         </svg>
                         Priority Mail Express
                       </label>
@@ -259,7 +259,7 @@
                     </div>
                   </div>
                   <div>
-                    <button class="aply__button" type="button">Apply</button>
+                    <button class="apply__button" type="button">Apply</button>
                     <button class="clear__button" type="reset">Clear</button>
                   </div>
                 </div>
@@ -308,7 +308,7 @@
                   <button type="button" class="details__btn">
                     DETAILS
 
-                    <svg class="contacts-icon" width="24" height="24">
+                    <svg class="details-icon">
                       <use href="./images/icons.svg#icon-chevron-down"></use>
                     </svg>
                   </button>
@@ -331,7 +331,7 @@
                 <div class="orders__table__item">
                   <button type="button" class="details__btn">
                     DETAILS
-                    <svg class="contacts-icon" width="32" height="32">
+                    <svg class="details-icon">
                       <use href="./images/icons.svg#icon-chevron-down"></use>
                     </svg>
                   </button>
@@ -354,7 +354,7 @@
                 <div class="orders__table__item">
                   <button type="button" class="details__btn">
                     DETAILS
-                    <svg class="contacts-icon" width="32" height="32">
+                    <svg class="details-icon">
                       <use href="./images/icons.svg#icon-chevron-down"></use>
                     </svg>
                   </button>
@@ -377,7 +377,7 @@
                 <div class="orders__table__item">
                   <button type="button" class="details__btn">
                     DETAILS
-                    <svg class="contacts-icon" width="32" height="32">
+                    <svg class="details-icon">
                       <use href="./images/icons.svg#icon-chevron-down"></use>
                     </svg>
                   </button>
@@ -400,7 +400,7 @@
                 <div class="orders__table__item">
                   <button type="button" class="details__btn">
                     DETAILS
-                    <svg class="contacts-icon" width="32" height="32">
+                    <svg class="details-icon">
                       <use href="./images/icons.svg#icon-chevron-down"></use>
                     </svg>
                   </button>
@@ -423,7 +423,7 @@
                 <div class="orders__table__item">
                   <button type="button" class="details__btn">
                     DETAILS
-                    <svg class="contacts-icon" width="32" height="32">
+                    <svg class="details-icon">
                       <use href="./images/icons.svg#icon-chevron-down"></use>
                     </svg>
                   </button>
@@ -446,7 +446,7 @@
                 <div class="orders__table__item">
                   <button type="button" class="details__btn">
                     DETAILS
-                    <svg class="contacts-icon" width="32" height="32">
+                    <svg class="details-icon">
                       <use href="./images/icons.svg#icon-chevron-down"></use>
                     </svg>
                   </button>
@@ -469,7 +469,7 @@
                 <div class="orders__table__item">
                   <button type="button" class="details__btn">
                     DETAILS
-                    <svg class="contacts-icon" width="32" height="32">
+                    <svg class="details-icon">
                       <use href="./images/icons.svg#icon-chevron-down"></use>
                     </svg>
                   </button>
@@ -492,7 +492,7 @@
                 <div class="orders__table__item">
                   <button type="button" class="details__btn">
                     DETAILS
-                    <svg class="contacts-icon" width="32" height="32">
+                    <svg class="details-icon">
                       <use href="./images/icons.svg#icon-chevron-down"></use>
                     </svg>
                   </button>
@@ -515,7 +515,7 @@
                 <div class="orders__table__item">
                   <button type="button" class="details__btn">
                     DETAILS
-                    <svg class="contacts-icon" width="32" height="32">
+                    <svg class="details-icon">
                       <use href="./images/icons.svg#icon-chevron-down"></use>
                     </svg>
                   </button>
@@ -538,7 +538,7 @@
                 <div class="orders__table__item">
                   <button type="button" class="details__btn">
                     DETAILS
-                    <svg class="contacts-icon" width="32" height="32">
+                    <svg class="details-icon">
                       <use href="./images/icons.svg#icon-chevron-down"></use>
                     </svg>
                   </button>
@@ -561,7 +561,7 @@
                 <div class="orders__table__item">
                   <button type="button" class="details__btn">
                     DETAILS
-                    <svg class="contacts-icon" width="32" height="32">
+                    <svg class="details-icon">
                       <use href="./images/icons.svg#icon-chevron-down"></use>
                     </svg>
                   </button>
@@ -584,7 +584,7 @@
                 <div class="orders__table__item">
                   <button type="button" class="details__btn">
                     DETAILS
-                    <svg class="contacts-icon" width="32" height="32">
+                    <svg class="details-icon">
                       <use href="./images/icons.svg#icon-chevron-down"></use>
                     </svg>
                   </button>
@@ -607,7 +607,7 @@
                 <div class="orders__table__item">
                   <button type="button" class="details__btn">
                     DETAILS
-                    <svg class="contacts-icon" width="32" height="32">
+                    <svg class="details-icon">
                       <use href="./images/icons.svg#icon-chevron-down"></use>
                     </svg>
                   </button>
@@ -630,7 +630,7 @@
                 <div class="orders__table__item">
                   <button type="button" class="details__btn">
                     DETAILS
-                    <svg class="contacts-icon" width="32" height="32">
+                    <svg class="details-icon">
                       <use href="./images/icons.svg#icon-chevron-down"></use>
                     </svg>
                   </button>
@@ -648,7 +648,7 @@
               <p class="pagination__title">Shown per page:</p>
               <div class="pagination__page__quantity">
                 20
-                <svg class="icon" width="24" height="24">
+                <svg class="icon-down">
                   <use href="./images/icons.svg#icon-chevron-down"></use>
                 </svg>
               </div>
@@ -658,14 +658,14 @@
               <div class="pagination__pages">1-20 of 45</div>
               <div class="pagination__btns">
                 <div class="icon__thumb">
-                  <svg class="icon__left" width="17" height="17">
+                  <svg class="icon__left">
                     <use href="./images/icons.svg#icon-chevron-down"></use>
                   </svg>
                 </div>
                 <div class="pagination__number current__page">1</div>
                 <div class="pagination__number">2</div>
                 <div class="icon__thumb">
-                  <svg class="icon__right" width="17" height="17">
+                  <svg class="icon__right">
                     <use href="./images/icons.svg#icon-chevron-down"></use>
                   </svg>
                 </div>
